Modify CSS grid template rows to avoid height stretched by growing data

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 /* basic */
 a {
     text-decoration: none;
@@ -212,7 +216,10 @@ a {
 .chat-wrapper {
     outline: 2px solid #000;
     display: grid;
-    height: 676px;
+    /* 用hight無法正確設定grid的高度，故註解掉 by Penny */
+    /* height: 676px; */
+    /* 加上grid-template-rows設定高度 by Penny */
+    grid-template-rows: 100vh;
     grid-template-columns: 0.5fr 1fr 3fr;
 }
 .chat-nav {
@@ -365,6 +372,12 @@ a {
     border-color: grey;
     border-style: solid;
     border-width: 0 1.5px 3px 1.5px;
+    /* The followings are added by Penny  */
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    overflow: auto;
+    overflow-x:hidden;
 }
 .top-section .right-part {
     border-color: grey;
